buggy scrollbar

--- a/src/tailwinds.css
+++ b/src/tailwinds.css
@@ -7009,8 +7009,16 @@ select {
   align-self: center;
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-scroll {
+  overflow: scroll;
 }
 
 .overflow-y-auto {
@@ -7155,11 +7163,6 @@ select {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 
 .py-5 {
@@ -7464,36 +7467,12 @@ select {
   height: 8px;
 }
 
-.scrollbar-thumb-rounded::-webkit-scrollbar-thumb {
-  border-radius: 0.25rem;
-}
-
 .scrollbar-thumb-rounded-md::-webkit-scrollbar-thumb {
   border-radius: 0.375rem;
 }
 
-.scrollbar-track-gray-\31 00 {
-  --scrollbar-track: #f3f4f6 !important;
-}
-
-.scrollbar-thumb-gray-\32 00 {
-  --scrollbar-thumb: #e5e7eb !important;
-}
-
-.scrollbar-track-gray-\35 00 {
-  --scrollbar-track: #6b7280 !important;
-}
-
 .scrollbar-track-gray-\37 00 {
   --scrollbar-track: #374151 !important;
-}
-
-.scrollbar-track-gray-\38 00 {
-  --scrollbar-track: #1f2937 !important;
-}
-
-.scrollbar-thumb-gray-\38 00 {
-  --scrollbar-thumb: #1f2937 !important;
 }
 
 .scrollbar-thumb-gray-\39 00 {
